# pytyon-exercise

./: README.md  pyproject.toml
src/python_exercise/: __init__.py
src/python_exercise/tutorial/: 01_ndarray.py
